# nit-builder

./: .deploy-test.md  .env.example  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  README.ru.md  eslint.config.js  package-lock.json  package.json  server.ts  vitest.config.ts
app/: entry.server.tsx  root.tsx  routes.ts
docs/: lm-studio-guide.md
scripts/: appwrite-migrate.ts  generate-magic-link.ts  liveRun.ts  sync-version.mjs
tests/: adminMarkup.test.ts  agentPolish.test.ts  api.auth.routes.test.ts  api.public-templates.test.ts  api.share.test.ts  api.sites.test.ts  api.template-vote-submit.test.ts  api.user-templates.test.ts  artifactExport.test.ts  artifactMode.test.ts  bundlePhp.test.ts  bundleStaticSite.test.ts  clampOutputToContext.test.ts  completionMessage.test.ts  constrainedPlanGen.test.ts  contextualEmbed.test.ts  continuation.test.ts  cssPatch.test.ts  customArtifactBuilder.test.ts  feedbackStore.test.ts  freeGenerationRegression.test.ts  historyStore.test.tsx  htmlOrchestrator.test.ts  htmlPostPolish.test.ts  htmlPremiumBase.test.ts  htmlPrompts.test.ts  intentClassifier.test.ts  llmClient.test.ts  lmStudioProxy.test.ts  matryoshkaEmbeddings.test.ts  modelTier.test.ts  phpSqliteArtifactBuilder.test.ts  phpSqliteScenarioRegression.test.ts  pipelineHttpFallback.test.ts  planQuality.test.ts  planSchema.test.ts  polishCompletion.test.ts  (+18 more)
tunnel/desktop/src-tauri/: Cargo.toml  tauri.conf.json
tunnel/desktop/src-tauri/capabilities/: default.json
tunnel/desktop/src-tauri/src/: auth_link.rs  lib.rs  lm_studio.rs  protocol.rs  tunnel.rs
(+257 files in other folders)
