[package]
name = "nit-tunnel-desktop"
version = "0.2.2"
description = "NIT Builder tunnel client — proxy your LM Studio to NIT Builder sites"
authors = ["Igor <igor@vibecoding.by>"]
license = "MIT"
repository = "https://github.com/antsincgame/nit-builder"
edition = "2021"
rust-version = "1.77"

[lib]
name = "nit_tunnel_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = ["tray-icon"] }
tauri-plugin-shell = "2.0.0"
tauri-plugin-store = "2.0.0"
tauri-plugin-autostart = "2.0.0"

# Runtime
tokio = { version = "1.40", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"

# HTTP + SSE client for LM Studio proxy
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Crypto for PKCE (browser login / привязка устройства)
sha2 = "0.10"
base64 = "0.22"

# Logging
log = "0.4"
env_logger = "0.11"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# UUID for request IDs
uuid = { version = "1.10", features = ["v4", "serde"] }

# Async channel for tunnel ↔ UI communication
tokio-util = "0.7"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "s"
strip = true
